# Facultate

./: .gitignore  CMakeLists.txt  InserareNodLista  ParcurgeNodLista  main  masini  student
Algo/Lab1/: main.cpp
Algo/Lab2/: main.cpp
Algo/Lab2/output/: output_float_matrix.txt
Algo/Lab3/: Prob2.cpp  Prob3.cpp  prob4.cpp
Algo/Lab3.1/: binary.cpp  counting.cpp  invertion.cpp  merge.cpp  selection.cpp
Algo/Lab4/: linkedlist.cpp  muchiitovecini.cpp  vecinitomatrice.cpp
Algo/Lab4/Grafuri/: grafprinlistextremmuchi.cpp
Algo/Lab5/: BFmatrixadiac.cpp
Algo/Lab6/: algofloydfulker.cpp  drumminidouanod.cpp
Anul2/Algo/Lab1/: main.cpp
Anul2/Algo/Lab3/: Prob3.cpp
Anul2/Algo/Lab3.1/: binary.cpp  bubble.cpp  insertion.cpp  sequential.cpp
Anul2/Algo/Lab4/: listvecinitolistmuchii.cpp  matriceaadiacenta.cpp
Anul2/Algo/Lab5/: DFgrafListVecini.cpp  grupPrieteni.cpp
Anul2/Algo/Lab6/: algodijkstra.cpp  graph.txt
Anul2/Algo/Lab7/: arborebinar.cpp  prim.cpp
Anul2/DataStruct/Lab5/: list.in  main.c
Anul2/DataStruct/Lab6/: binaryTree  stack
Anul2/DataStruct/Lab7/: date.in  main.c
Anul2/DataStruct/Lab8/: main.c
Anul2/OOP/Final/: biblioteca.cpp
Anul2/OOP/Lab1.1/: prob1.cpp
Anul2/OOP/Lab10/: derivare.cpp  file.in  partial.cpp  tablou.cpp  virtualizare.cpp
Anul2/OOP/Lab2.1/: CONT_BANCAR.h  main.cpp
Anul2/OOP/Lab2.1.2/: main.cpp
Anul2/OOP/Lab3/: main.cpp  usecase.cpp
Anul2/OOP/Lab4/: CoffeeMachine1.cpp
Anul2/OOP/Lab5/: alimente1.cpp
DataStruct/Lab2/: student.c  student.in  student.out
DataStruct/Lab3/: data.in  linklist.c
DataStruct/Lab4/: date.in  liste.c
DataStruct/Lab5/: main
DataStruct/Lab6/: binaryTree.c  date.in  stack.c  tials  tials.c
DataStruct/Lab7/: main
DataStruct/Lab8/: main
DataStruct/Lab9/: main  main.c  vector.in
Lab1/: main.cpp
Lab2/: main.cpp
Lab2.1/: FUNCTII.cpp  README.md
Leetcode/: ContainerWithMostWater.c  Readme.md  c  c.c  regularExpressionMatching.c  removeElement.cpp  removeElement1.cpp  revinteger.c  strtoint.c  twoSum.cpp
OOP/Final/: catalog.cpp  fabrica.cpp
OOP/Lab1/: main.cpp
OOP/Lab1.1/: main.cpp  prob2.cpp
OOP/Lab10/: mostenire.cpp  tablou.cpp
OOP/Lab2/: main.cpp
OOP/Lab2.1/: main.cpp
OOP/Lab2.1.2/: main.cpp  readme.md
OOP/Lab3/: persoane.cpp  readme.md
OOP/Lab4/: CoffeeMachine.cpp  readme.md
OOP/Lab5/: Alimente2.cpp  alimente.cpp  alimente1.cpp  marfa.cpp  produs.cpp  readme.md
OOP/Lab6/: operatori.cpp
OOP/Lab6.1/: overload.cpp  sirulete.cpp
OOP/Lab7/: main.cpp
OOP/Lab8/: conversie.md  medical.cpp  strmanip.cpp
OOP/Lab9/: facturi.cpp
PbInfo/: Power  bisectoare1.c  inaltimi2.c  log  multGauss.c  nZero  ndivnlen  ndivnlen.c  sfera.c  unghiuri.c
PbInfo/cls9/: Power.cpp  afisarePuteri.c  bisectoare  cifBin.c  cifrak.c  cifreBinare.c  expresie2.c  expresie3.c  fibonacci.c  fibonacci1.c  inaltimi2  inaltimi2.c  log.c  maxx3  maxx3.c  multGauss  nZero.cpp  nicenumbers.c  nmaxim.c  nminim.c  paritate9  paritate9.c  patratPerfect.c  sfera  sumaCifre.c  sumaDivizori.c  sumaDivizoriImpari.c  sumaPrefixe.c  sumaPrefixePare.c  sumaPrefixePareString.c
WEB/Dev/: stil.css
WEB/Lab1/: index.html  main.html  script.js  style.css
WEB/freelancer/: index.html  index.php  read.php
pbinfo/: main.cpp
(+160 files in other folders)
