cmake_minimum_required(VERSION 3.27)
project(Facultate)

set(CMAKE_CXX_STANDARD 14)

include_directories(OOP/Lab10/scena)
include_directories(OOP/Lab2.1)

add_executable(Facultate
        Algo/Lab1/main.cpp
        Algo/Lab2/main.cpp
        Algo/Lab3/Prob2.cpp
        Algo/Lab3/Prob3.cpp
        Algo/Lab3/prob4.cpp
        Algo/Lab3.1/binary.cpp
        Algo/Lab3.1/bubble.cpp
        Algo/Lab3.1/counting.cpp
        Algo/Lab3.1/insertion.cpp
        Algo/Lab3.1/invertion.cpp
        Algo/Lab3.1/merge.cpp
        Algo/Lab3.1/selection.cpp
        Algo/Lab3.1/sequential.cpp
        Algo/Lab4/Grafuri/grafmatrixadiac.cpp
        Algo/Lab4/Grafuri/grafprinlistextremmuchi.cpp
        Algo/Lab4/Grafuri/grafprinvrfadiac.cpp
        Algo/Lab4/linkedlist.cpp
        Algo/Lab4/listvecinitolistmuchii.cpp
        Algo/Lab4/matriceaadiacenta.cpp
        Algo/Lab4/muchiitovecini.cpp
        Algo/Lab4/vecinitomatrice.cpp
        Algo/Lab5/BFmatrixadiac.cpp
        Algo/Lab5/DFgrafListVecini.cpp
        Algo/Lab5/grupPrieteni.cpp
        Algo/Lab6/algodijkstra.cpp
        Algo/Lab6/algofloydfulker.cpp
        Algo/Lab6/drumminidouanod.cpp
        Algo/Lab7/arborebinar.cpp
        Algo/Lab7/prim.cpp
        DataStruct/Lab2/masini/masini.c
        DataStruct/Lab2/student.c
        DataStruct/Lab3/LabHomework/LSI_medium2/Ex1.c
        DataStruct/Lab3/LabHomework/LSI_medium2/Ex2.c
        DataStruct/Lab3/LabHomework/LSI_medium2/Ex3.c
        DataStruct/Lab3/linklist.c
        DataStruct/Optional/LucruNodListe/InserareNodLista.c
        DataStruct/Optional/LucruNodListe/ParcurgeNodLista.c
        DataStruct/Optional/LucruNodListe/StergereNodLista.c
        Leetcode/removeElement.cpp
        Leetcode/removeElement1.cpp
        Leetcode/twoSum.cpp
        OOP/Final/biblioteca.cpp
        OOP/Final/catalog.cpp
        OOP/Final/fabrica.cpp
        OOP/Lab1/main.cpp
        OOP/Lab1.1/main.cpp
        OOP/Lab1.1/prob1.cpp
        OOP/Lab1.1/prob2.cpp
        OOP/Lab10/scena/cerc.cpp
        OOP/Lab10/scena/cerc.h
        OOP/Lab10/scena/main.cpp
        OOP/Lab10/scena/patrat.cpp
        OOP/Lab10/scena/patrat.h
        OOP/Lab10/scena/romb.cpp
        OOP/Lab10/scena/romb.h
        OOP/Lab10/scena/triunghi.cpp
        OOP/Lab10/scena/triunghi.h
        OOP/Lab10/derivare.cpp
        OOP/Lab10/mostenire.cpp
        OOP/Lab10/partial.cpp
        OOP/Lab10/tablou.cpp
        OOP/Lab10/virtualizare.cpp
        OOP/Lab2/main.cpp
        OOP/Lab2.1/CONT_BANCAR.h
        OOP/Lab2.1/FUNCTII.cpp
        OOP/Lab2.1/main.cpp
        OOP/Lab2.1.2/main.cpp
        OOP/Lab3/main.cpp
        OOP/Lab3/persoane.cpp
        OOP/Lab3/usecase.cpp
        OOP/Lab4/CoffeeMachine.cpp
        OOP/Lab4/CoffeeMachine1.cpp
        OOP/Lab5/alimente.cpp
        OOP/Lab5/alimente1.cpp
        OOP/Lab5/Alimente2.cpp
        OOP/Lab5/marfa.cpp
        OOP/Lab5/produs.cpp
        OOP/Lab6/operatori.cpp
        OOP/Lab6.1/overload.cpp
        OOP/Lab6.1/sirulete.cpp
        OOP/Lab7/main.cpp
        OOP/Lab8/conversie.cpp
        OOP/Lab8/medical.cpp
        OOP/Lab8/strmanip.cpp
        OOP/Lab9/facturi.cpp
        pbinfo/main.cpp)
